--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint-file": "eslint --fix",
     "test": "vitest test/unit",
     "test:coverage": "vitest run --coverage --coverage.reportOnFailure",
-    "docs": "typedoc --plugin none --out docs src/index.ts",
+    "docs": "typedoc --out docs src/index.ts",
     "docs-md": "typedoc --plugin typedoc-plugin-markdown --out docs-md src/index.ts",
     "prepare": "husky install"
   },
@@ -61,9 +61,7 @@
     "axios": "^0.26.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "semantic-release": "^22.0.12",
-    "sturdy-websocket": "^0.2.1",
-    "websocket": "^1.0.34"
+    "semantic-release": "^22.0.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
@@ -93,8 +91,8 @@
     "size-limit": "^7.0.8",
     "ts-jest": "^27.1.4",
     "tslib": "^2.3.1",
-    "typedoc": "^0.22.15",
-    "typedoc-plugin-markdown": "^3.12.1",
+    "typedoc": "^0.25.13",
+    "typedoc-plugin-markdown": "^4.0.1",
     "typescript": "^5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.0"
