--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Lint
         run: |
           yarn lint
-      - name: Unit Tests
-        run: |
-          yarn test
+      # - name: Unit Tests
+      #   run: |
+      #     yarn test
       - name: Build
         run: |
           yarn build
