--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "main": "dist/cjs/index.js",
   "main-es": "dist/es/index.js",
   "module": "dist/esm/index.js",
+  "engines": {
+    "node": ">18.0.0"
+  },
   "exports": {
     "node": {
       "types": "./dist/src/index.d.ts",
