--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,6 @@
       "~/*": ["./*"]
     }
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["dist/**/*", "node_modules/**/*"]
 }
