--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@size-limit/preset-big-lib": "^7.0.8",
     "@trivago/prettier-plugin-sort-imports": "^3.3.1",
