--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
     "types": ["vitest/globals"],
     "paths": {
       "~/*": ["./*"]
