--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "lint-file": "eslint --fix",
     "test": "vitest test/unit",
     "test:coverage": "vitest run --coverage --coverage.reportOnFailure",
-    "docs": "typedoc --out docs src/index.ts",
     "docs-md": "typedoc --plugin typedoc-plugin-markdown --out docs-md src/index.ts",
     "prepare": "husky install"
   },
@@ -69,6 +68,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@size-limit/preset-big-lib": "^7.0.8",
     "@trivago/prettier-plugin-sort-imports": "^3.3.1",
